fix: add documentation
